<resources>
    <string name="app_name">Examen</string>
    <string name="titulo">Calculos del Rectangulo</string>
    <string name="nombre">Escribe aqui tu nombre</string>
    <string name="base">Escribe la base del rectangulo</string>
    <string name="altura">Escribe la altura del rectangulo</string>
    <string name="calcular">Que deseas calcular</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnSalir">Salir</string>
    <string name="btnCalcular">Calcular</string>
    <string name="btnRegresar">Regresar</string>
</resources>