<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="35sp"
            android:textAlignment="center">
        </TextView>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:id="@+id/txtNombre"
            android:hint="@string/nombre"
            android:inputType="text">
        </EditText>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="75dp"
            android:id="@+id/txtBase"
            android:hint="@string/base"
            android:inputType="numberDecimal"
            android:maxLength="4">
        </EditText>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:id="@+id/txtAltura"
            android:hint="@string/altura"
            android:inputType="numberDecimal"
            android:maxLength="4">
        </EditText>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/btnLimpiar"
            android:layout_marginStart="25dp"
            android:layout_marginTop="125dp"
            android:text="@string/btnLimpiar">
        </Button>
        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="-50dp"
            android:id="@+id/btnSiguiente"
            android:text="@string/btnSiguiente">
        </Button>
        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="255dp"
            android:layout_marginTop="-50dp"
            android:id="@+id/btnSalir"
            android:text="@string/btnSalir">
        </Button>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>