<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RectanguloActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="Nombre"
            android:textSize="25sp"
            android:id="@+id/textNombre">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="Base"
            android:textSize="15sp"
            android:id="@+id/textBase">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="Altura"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:id="@+id/textAltura">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:text="@string/calcular"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:id="@+id/textCalcular">
        </TextView>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:orientation="vertical"
            android:id="@+id/group">
            <RadioButton
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Area"/>
            <RadioButton
                android:id="@+id/perimetro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Perimetro"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="Resultado"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:id="@+id/textResultado">
        </TextView>

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="50dp"
            android:text="@string/btnCalcular">
        </Button>

        <Button
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:id="@+id/btnRegresar"
            android:text="@string/btnRegresar">
        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>